# Simulador-metereologico

./: .gitignore  README.md  main.py  plan.md  pyproject.toml  spec.md
frontend/: index.html  script.js  style.css
src/: __init__.py  api.py  cities.py  config.py  plotting.py  risk.py  routing.py  schemas.py  wrf_processing.py
tests/: test_config.py  test_routing.py
