[project]
name = "simulador"
version = "0.1.0"
description = "Simulador meteorológico de rutas aeronáuticas usando datos de WRF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "metpy>=1.7.1",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "uvicorn>=0.46.0",
    "xarray>=2026.4.0",
    "xwrf>=0.0.5",
]
